# xz

./: CHANGELOG_NEW_FEATURES.md  CHANGELOG_SMART_COMPRESS.md  COMPLEX_FEATURES.md  DEPLOYMENT_SUMMARY.md  FEATURES.md  PUSH_SUMMARY.md  README.md  README_NEW_FEATURES.md  README_SMART_COMPRESS.md  REPOSITORY_STATUS.md  SUMMARY.md  VERSION_INFO.md  build_and_test.sh
M-test-code/: CMakeLists.txt
M-test-code/examples/: README.md  advanced_example.c  performance_test.c  quick_start.c
M-test-code/src/: stest.c  stest.h  stest_utils.c  stest_utils.h
M-test-code/tests/: stests.c  stests.h
src/liblzma/api/lzma/: version.h
src/xz/: adaptive.c  adaptive.h  analytics.c  analytics.h  integrity.c  integrity.h  optimizer.c  optimizer.h  parallel.c  parallel.h  recovery.c  recovery.h  smart_compress.c  smart_compress.h
tests/: Makefile.mtestc  test_complex_features.c  test_new_features.c  test_smart_compress.c
tests/mtestc/: Makefile  stest.c  stest.h
